--- a/CSS/main.css
+++ b/CSS/main.css
@@ -3,7 +3,7 @@ body {
 	background: url('/Img/bg.jpg') fixed;
 	margin: 20px;
 	padding: 0;
-	text-align: center; /* this centers the container in IE 5* browsers. The text is then set to the left aligned default in the #container selector */
+	//text-align: center; /* this centers the container in IE 5* browsers. The text is then set to the left aligned default in the #container selector */
 	color: #000000;
 }
 #container, #container a {
